turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:10: error: '{' expected but '=' found.
    i match = {
            ^DiskFour:15: error: identifier expected but ')' found.
    setCouleur(Color.)
                     ^